# ip7z-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  build.rs  cross-test.sh  miri+sanitizer-test.sh
ip7z/: Cargo.toml  LICENSE  TODO.md  build.rs
ip7z-sys/: Cargo.toml  build.rs
ip7z-sys/src/: lib.rs
ip7z/src/: IArchive.rs  ICoder.rs  IFolder.rs  IPassword.rs  IProgress.rs  IStream.rs  codecs.rs  ffi.rs  lib.rs  main.rs  propid.rs  tests.rs
ip7z/src/handlers/: LZMAHandler.rs
ip7z/src/win_ffi/: bstr.rs  filetime.rs  hresult.rs  mod.rs  propvariant.rs
src/: IArchive.rs  ICoder.rs  IFolder.rs  IPassword.rs  IProgress.rs  IStream.rs  ffi.rs  lib.rs  main.rs  propid.rs
src/handlers/: LZMAHandler.rs
src/win_ffi/: bstr.rs  filetime.rs  hresult.rs  propvariant.rs
