[package]
name = "ip7z-sys"
version = "0.1.0"
edition = "2024"
license = "MIT"
links = "7z"

[features]
dynamic = ["dep:libloading", "dep:winreg"]
static = ["dep:uasm", "dep:cc"]

[build-dependencies]
cc = { version = "1.2.57", optional = true }
uasm = { version = "1.0.7", optional = true }

[target.'cfg(windows)'.dependencies]
winreg = { version = "0.56", optional = true }

[dependencies]
libloading = { version = "0.9.0", optional = true }
